# rsnake

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  snake_config.toml  src-files.js
.github/workflows/: coverage.yml  cratesio.yml  doc.yml  release_github.yml  test.yml
rsnake/: all.html  fn.main.html  fn.start_snake.html  index.html
rsnake/controls/: index.html
rsnake/controls/direction/: enum.Direction.html  index.html
rsnake/controls/input/: constant.FRUITS_KEYS.html  constant.HELP_KEYS.html  constant.MAIN_MENU_KEYS.html  constant.PARAMETERS_KEYS.html  constant.PAUSE_KEYS.html  constant.QUIT_KEYS.html  constant.RESET_KEYS.html  constant.START_KEYS.html  constant.VELOCITY_KEYS.html  enum.GreetingOption.html  fn.flush_input_buffer.html  fn.greeting_screen_manage_input.html  fn.playing_input_loop.html  index.html  sidebar-items.js
rsnake/controls/speed/: constant.FAST_CONFIG.html  constant.NORMAL_CONFIG.html  constant.SLOW_CONFIG.html  constant.TREMENDOUS_CONFIG.html  enum.Speed.html  index.html  struct.SpeedConfig.html
rsnake/game_logic/: index.html
rsnake/game_logic/fruits_manager/: index.html  struct.FruitsManager.html
rsnake/game_logic/game_options/: constant.INI_POSITION.html  constant.PARAMS_HEADER.html  index.html  sidebar-items.js  struct.GameOptions.html
rsnake/game_logic/playing_logic/: fn.controls_greeting_screen.html  fn.playing_logic_loop.html  index.html
rsnake/game_logic/playing_thread_manager/: index.html  struct.Game.html
rsnake/game_logic/state/: enum.GameStatus.html  index.html  sidebar-items.js  struct.GameState.html
rsnake/graphics/: index.html  sidebar-items.js
rsnake/graphics/graphic_block/: index.html  struct.GraphicBlock.html  struct.Position.html
rsnake/graphics/menus/: index.html
rsnake/graphics/playing_render/: constant.FPS_RECT.html  constant.LIFE_RECT.html  constant.NB_OF_FRAMES_WINDOW.html  constant.SCORE_RECT.html  constant.TOO_MUCH_LIVES_TO_DISPLAY.html  fn.game_state_render.html  fn.playing_render_loop.html  index.html  sidebar-items.js
rsnake/graphics/sprites/: index.html
rsnaker/: all.html  fn.start_snake.html  index.html  sidebar-items.js
rsnaker/controls/: index.html  sidebar-items.js
rsnaker/game_logic/: index.html  sidebar-items.js
rsnaker/graphics/: index.html
search.desc/rsnake/: rsnake-desc-0-.js
search.desc/rsnaker/: rsnaker-desc-0-.js
src/: cli.rs  game.rs  game_state.rs  lib.rs  main.rs  map.rs  snake.rs  utils.rs
src/controls/: cli.rs  direction.rs  fruits_manager.rs  game_option.rs  game_state.rs  input.rs  mod.rs  speed.rs
src/game_logic/: fruits_manager.rs  game_options.rs  mod.rs  playing_logic.rs  playing_thread_manager.rs  state.rs
src/graphics/: fruit.rs  graphic_block.rs  map.rs  menus.rs  mod.rs  playing_render.rs  snake_body.rs  utils.rs
src/rsnake/: lib.rs.html  main.rs.html
src/rsnaker/: lib.rs.html
src/snake/: body_elements.rs  fruit.rs  graphic_block.rs  mod.rs  snake.rs  snake_body.rs  snake_moving.rs  speed.rs
tests/: cli_test.rs
(+219 files in other folders)
