[package]
name = "rsnake"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
#see https://docs.rs/ratatui/latest/ratatui/widgets/trait.WidgetRef.html need to have better performance avoiding cloning widget each time
#https://github.com/ratatui/ratatui/discussions/1274
ratatui = { version = "0.30.0-alpha.2", features = ["unstable-widget-ref"] }
rand = "0.9.0"
clap = { version = "4.5.34", features = ["derive"] }

#For testing cli easly
[dev-dependencies]
assert_cmd = { version = "2" }
predicates = "3"

[[bin]]
name = "rsnake"
path = "src/main.rs"

[lib]
path = "src/lib.rs"


[profile.profiling]
inherits = "release"
debug = true
#For Performance flamegraph using https://github.com/mstange/samply (more user/windows friendly, than flamegraph-rs)
#Build with: cargo build --profile profiling
#Run with:samply record ./target/profiling/yourrustprogram
#NB allow connection to 127.0.0.1 in firefox, like disabling Ublock for this page