[package]
name = "rsnaker"
version = "0.1.0"
edition = "2024"
authors = ["RF"]
description = "A good old retro Snake in terminal UI"
license = "GPL-3.0-only"
documentation = "https://docs.rs/rsnaker"
repository = "https://github.com/FromTheRags/rsnake"
readme = "README.md"
keywords = ["Ratatui", "TUI", "Snake", "Game", "retro"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = { version = "0.29.0", features = ["events"] }
#see https://docs.rs/ratatui/latest/ratatui/widgets/trait.WidgetRef.html need to have better performance avoiding cloning widget each time
#https://github.com/ratatui/ratatui/discussions/1274
ratatui = { version = "0.30.0-alpha.2", features = ["unstable-widget-ref"] }
rand = "0.9.1"
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"


#For testing cli easly
[dev-dependencies]
assert_cmd = { version = "2.0.17" }
predicates = "3.1.3"

[[bin]]
name = "rsnake"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[profile.release]
strip = "symbols"  # since Rust 1.73+
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
#For Performance flamegraph using https://github.com/mstange/samply (more user/windows friendly, than flamegraph-rs)
#Build with: cargo build --profile profiling
#Run with:samply record ./target/profiling/yourrustprogram
#NB allow connection to 127.0.0.1 in firefox, like disabling Ublock for this page